# sihui

./: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.claude/: settings.local.json
public/: excalidraw-assets.js
scripts/: copy-excalidraw-assets.mjs
src/: App.tsx  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: BoardSidebar.tsx  MindMapPanel.tsx
src/editor/: mindmap.ts  scene.ts
src/storage/: boards.ts
