[package]
name = "sihui"
version = "0.1.0"
description = "本地优先的轻量白板应用"
authors = ["sihui"]
edition = "2021"

[lib]
name = "sihui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
serde_json = "1"
base64 = "0.22"
